--- a/server/config.properties
+++ b/server/config.properties
@@ -1,3 +1,14 @@
+#数据库连接部分
 db_Url=jdbc:mysql://127.0.0.1:3306/mud?useSSL=false
 db_Username=root
 db_Password=123456
+
+
+#战斗
+fight_hit=<white>造成伤害 - %s
+#装备有关
+equip_variable_show=<blue>属性变化</><br>&emsp;<red>攻击力 :%s --> +%s</><br>&emsp;<pink>血上线 :%s --> +%s</><br>
+equip_drop=你脱下了 
+equip_detail_hit=&emsp;<red>攻击力:%s</><br>
+#我的状态
+my_state=<red>攻击力 : %s </><br><pink>血上限 : %s </><br>
