1、背包功能完善，同步加锁问题设想，添加属性， 2、修改客户端样式添加功能按钮

--- a/server/config.properties
+++ b/server/config.properties
@@ -7,8 +7,15 @@ db_Password=123456
 #战斗
 fight_hit=<white>造成伤害 - %s
 #装备有关
-equip_variable_show=<blue>属性变化</><br>&emsp;<red>攻击力 :%s --> +%s</><br>&emsp;<pink>血上线 :%s --> +%s</><br>
+equip_variable_show=<blue>『属性变化』</><br>&emsp;<red>『攻击力』 :%s --> +%s</><br>&emsp;<pink>『血上线』 :%s --> +%s</><br>
 equip_drop=你脱下了 
-equip_detail_hit=&emsp;<red>攻击力:%s</><br>
+equip_detail_hit=&emsp;<red>『攻击力』:%s</><br>
 #我的状态
-my_state=<red>攻击力 : %s </><br><pink>血上限 : %s </><br>
+my_state=<yellow>『名称』 : %s </><br>\
+  <red>『攻击』 : %s </><br>\
+  <blue>『防御』 : %s </><br>\
+  <purple>『命中』 : %s </><br>\
+  <green>『闪躲』 : %s </>
+
+#背包有关
+item_drop=你丢弃了 %s 数量: %s
