1、完善了指令的新映射方法 2、加入了门派系统

--- a/server/config.properties
+++ b/server/config.properties
@@ -6,6 +6,7 @@ db_Password=123456
 
 #战斗
 fight_hit=<white>造成伤害 - %s
+fight_eva=<white>闪躲
 #装备有关
 equip_variable_show=<blue>『属性变化』</><br>&emsp;<red>『攻击力』 :%s --> +%s</><br>&emsp;<pink>『血上线』 :%s --> +%s</><br>
 equip_drop=你脱下了 
@@ -19,3 +20,6 @@ my_state=<yellow>『名称』 : %s </><br>\
 
 #背包有关
 item_drop=你丢弃了 %s 数量: %s
+#帮派门派
+faction_create_notice=开创门派<br>建立门派需要花费<purple>100铜币</>.<br>是否创立。
+faction_create_norm=门派的名字必须是中文哦<br>而且必须在2-6的长度！
