1、为技能开发做了准备，修改代码整洁，lua用中文

--- a/server/config.properties
+++ b/server/config.properties
@@ -23,3 +23,7 @@ item_drop=你丢弃了 %s 数量: %s
 #帮派门派
 faction_create_notice=开创门派<br>建立门派需要花费<purple>100铜币</>.<br>是否创立。
 faction_create_norm=门派的名字必须是中文哦<br>而且必须在2-6的长度！
+faction_exist=当前门派 %s 已存在哦！
+faction_create_success=%s 门派创立了，老大是 %s 大家都来认识认识吧！
+faction_destroy_success=%s 解散了门派 门派 %s 从此在江湖上销声匿迹了！
+faction_panel=<yellow>『帮派名称』</> %s <br> <red>『帮派等级』</> %s <br> <blue>『帮派宣言』</> %s<br>
