--- a/server/config.properties
+++ b/server/config.properties
@@ -5,8 +5,9 @@ db_Password=123456
 
 
 #战斗
-fight_hit=<white>造成伤害 - %s
-fight_eva=<white>闪躲
+fight_hit=<white>造成伤害 - %s</>
+fight_eva=<white>闪躲</>
+fight_hit_skill=%s<white> - %s</>
 #装备有关
 equip_variable_show=<blue>『属性变化』</><br>&emsp;<red>『攻击力』 :%s --> +%s</><br>&emsp;<pink>『血上线』 :%s --> +%s</><br>
 equip_drop=你脱下了 
@@ -17,7 +18,8 @@ my_state=<yellow>『名称』 : %s </><br>\
   <blue>『防御』 : %s </><br>\
   <purple>『命中』 : %s </><br>\
   <green>『闪躲』 : %s </>
-
+#技能
+skill_cur_change = <blue>你决定出手技能</> ：%s
 #背包有关
 item_drop=你丢弃了 %s 数量: %s
 #帮派门派
