--- a/server/pom.xml
+++ b/server/pom.xml
@@ -24,6 +24,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.72</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/online.sanen/cdm-all -->
         <dependency>
             <groupId>online.sanen</groupId>
