--- a/server/conf/faction.properties
+++ b/server/conf/faction.properties
@@ -14,6 +14,8 @@ faction_grant5=<yellow> 『帮主』</>
 faction_create_notice=开创门派<br>建立门派需要花费<purple>100铜币</>.<br>是否创立。
 faction_member_title=帮派成员
 faction_member=%s 等级:%s %s
+faction_grant_title=帮派授职
+faction_grant=%s 被 %s 提升为 %s
 faction_create_norm=门派的名字必须是中文哦<br>而且必须在2-6的长度！
 faction_exist=当前门派 %s 已存在哦！
 faction_create_success=%s 门派创立了，老大是 %s 大家都来认识认识吧！
