--- a/server/config.properties
+++ b/server/config.properties
@@ -17,7 +17,6 @@ db_Password=123456
 ####################################游戏部分####################################
 #多长时间保存一下游戏数据 默认 1分钟保存一下游戏数据
 save_delay = 1
-
 #战斗
 #默认攻击速度
 fight_speed=1200
@@ -38,3 +37,7 @@ my_state=<yellow>『名称』 : %s </><br>\
 skill_cur_change = <blue>你决定出手技能</> ：%s
 #背包有关
 item_drop=你丢弃了 %s 数量: %s
+
+map_panel=%s <br>&emsp;%s<br>\
+  <purple>当前地图挂机奖励:</><br>&emsp;%s\
+  
