副本系统构想，地图-房间 这样的对应关系。

--- a/server/conf/store.properties
+++ b/server/conf/store.properties
@@ -11,3 +11,4 @@ auction_buy=你从寄卖商城购买了 %s 数量的 %s 花费了%s 的%s
 auction_sell_remaining_desc=总共 %s 剩余 %s 未售出
 auction_sell_desc=由 %s 寄卖
 auction_reward=你出售了%s件商品 获取了%s %s %s %s
+auction_item=%s<br> ￥%s
