--- a/server/config.properties
+++ b/server/config.properties
@@ -15,6 +15,10 @@ db_Password=123456
 
 
 ####################################游戏部分####################################
+#一列的选项列表每页多少行
+page_limit_col1=10
+#两列的选项列表每页多少行
+page_limit_col2=10
 #多长时间保存一下游戏数据 默认 1分钟保存一下游戏数据
 save_delay = 1
 #战斗
@@ -37,7 +41,9 @@ my_state=<yellow>『名称』 : %s </><br>\
 skill_cur_change = <blue>你决定出手技能</> ：%s
 #背包有关
 item_drop=你丢弃了 %s 数量: %s
-
+#地图面板
 map_panel=%s <br>&emsp;%s<br>\
   <purple>当前地图挂机奖励:</><br>&emsp;%s\
   
+#出生地图id
+aliveMapId=1
