--- a/server/conf/relation.properties
+++ b/server/conf/relation.properties
@@ -2,3 +2,5 @@ friend_invite=%s 请求添加你为好友<br>是否同意呢?
 friend_success=成功添加好友！
 friend_exit=对方已经是你的好友了！
 friend_break=你删除了好友『%s』
+enemy_break=你和仇人『%s』和解了
+target_offline=对方不在线
